# Mr.Gato

./: .env  .gitignore  README.md  installer.sh  main.py  pyproject.toml  requirements.txt  settings.py
cogs/: bithday_cog.py  meow_cog.py  music_cog.py  welcome.py
data/: birthdays.db
