[project]
name = "mr-gato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-sqlite3>=0.0.1",
    "discord-py[voice]>=2.5.2",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.4",
    "pillow>=11.2.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "yt-dlp>=2025.3.31",
]
